Screen headings are cropped issue fixed

--- a/web/rainmaker/dev-packages/egov-ui-kit-dev/src/assets/styles/app.scss
+++ b/web/rainmaker/dev-packages/egov-ui-kit-dev/src/assets/styles/app.scss
@@ -151,6 +151,7 @@ body.employee-user-profile {
   .screenHeaderLabelStyle .label-text {
     color: #484848 !important;
     font-size: 14px !important;
+    overflow: visible!important;
   }
   
   .with-icon-menu{
